--- a/libft/Makefile
+++ b/libft/Makefile
@@ -6,7 +6,7 @@
 #    By: jbelinda <jbelinda@42.fr>                  +#+  +:+       +#+         #
 #                                                 +#+#+#+#+#+   +#+            #
 #    Created: 2019/09/19 18:52:47 by jbelinda          #+#    #+#              #
-#    Updated: 2019/10/10 04:09:08 by jbelinda         ###   ########.fr        #
+#    Updated: 2019/10/13 01:49:41 by jbelinda         ###   ########.fr        #
 #                                                                              #
 # **************************************************************************** #
 
@@ -92,6 +92,7 @@ SRC +=					\
 	   ft_islower.c		\
 	   ft_isspace.c		\
 	   ft_memrelease.c	\
+	   ft_memrealloc.c	\
 	   ft_memjoin.c		\
 	   ft_strndup.c		\
 	   ft_min.c			\
